--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -5,6 +5,26 @@
     margin: 0;
     padding: 0;
 }
+/* Estiliza a barra de rolagem */
+*::-webkit-scrollbar {
+    width: 8px; /* Define a largura da barra de rolagem */
+}
+
+/* Estiliza a trilha da barra de rolagem */
+*::-webkit-scrollbar-track {
+    border-radius: 10px;
+}
+
+/* Estiliza o polegar da barra de rolagem */
+*::-webkit-scrollbar-thumb {
+    background: #a3a2a2; /* Cor do polegar (a parte que arrasta) */
+    border-radius: 10px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background: #797878; /* Cor do polegar ao passar o mouse */
+}
+
 
 /* Sidebar padrão (desktop) */
 .sidebar {
@@ -34,10 +54,11 @@
 
 .sidebar.open img {
     width: 70%;
-    margin-bottom: 30px;
+    height: 58px;
+    margin-bottom: 20px;
 }
 .sidebar.closed img{
-    height: 76px;
+    width: 58px;
     margin-bottom: 30px;
 }
 
@@ -47,6 +68,7 @@
 }
 
 .sidebar ul li {
+    position: relative;
     margin: 10px 0;
     min-height: 57px;
     border-radius: 10px;
@@ -54,7 +76,6 @@
     display: flex;
     align-items: center; /*Alinhar ícone e texto */
     transition: 0.3s; /*Transição suave para cor dos itens */
-    justify-content: center;
     text-decoration: none;
     color: #555555;
 }
@@ -79,12 +100,20 @@
     transition: color 0.3s;
     transform: scale(1.035);  /* Efeito de deslizamente ao passar o mouse */
 }
-
 .sidebar ul li.active{
-    background-color: #d00e0e;
+    background-color: #ececec;
+}
+.sidebar ul li.active::before{
+    position: absolute;
+    left: 4px;
+    content: "a";
+    color: transparent;
+    background-color: #0a93a1;
+    border-radius: 2px;
+    width: 4px;
+    height: 42px;
 }
 .sidebar ul li.active a {
-    color: #ffffff; /* Cor diferenciada para o item ativo */
     font-weight: bold;
 }
 
