--- a/src/pages/hemocentros/Hemocentros.css
+++ b/src/pages/hemocentros/Hemocentros.css
@@ -1,6 +1,6 @@
 /* Container do Componente Hemocentros */
 .hemocentros-container {
-    max-width: 1200px; /* Limite de largura */
+    width: 100%;
 }
 
 /* Título */
