--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
+
+body{
+  background-color:  #ebebeb;
+}
 .App {
   display: flex;
 }
 
 .main-content {
   flex-grow: 1;
-  margin-left: 147px;
+  margin-left: 98px;
   padding: 40px;
 }
 
