--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -9,12 +9,28 @@
 }
   
 .dashboard-metrics {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
     gap: 20px;
     margin-top: 20px;
     width: 100%;
     box-sizing: border-box;
+}
+
+.dashboard-cards{
+    margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 10px;
+}
+.dashboard-graphChart{
+    flex: 1 1 300px;
+    background-color: #FFF;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
 }
 
 .chart-container {
@@ -40,7 +56,7 @@
 
 .error-message {
     color: red;
-    background-color: #ffe0e0;
+    background-color: #fceaea;
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 20px;
