--- a/src/pages/hemocentros/Hemocentros.css
+++ b/src/pages/hemocentros/Hemocentros.css
@@ -1,6 +1,7 @@
 /* Container do Componente Hemocentros */
 .hemocentros-container {
-    width: 100%;
+    max-width: 100vw;
+    padding: 20px;
 }
 
 /* Título */
@@ -99,4 +100,234 @@ button {
     .hemocentros-container {
         padding: 10px;
     }
+}
+
+
+.cardHemo{
+    background-color: #FFF;
+    padding: 20px;
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 2px 15px -3px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 2px 15px -3px rgba(0,0,0,0.75);
+    box-shadow: 0px 2px 15px -8px rgba(0,0,0,0.75);
+}
+.cardTabela{
+    padding-top: 0px;
+    display: flex;
+    flex-direction: column;
+    max-height: 100%;
+    overflow-y: scroll;
+}
+.cardTabela .header{
+    display: flex;
+    position: sticky; /* Fixando no topo ao rolar a página */
+    top: 0;
+    z-index: 1; /* Mantém o header sobreposto a outros elementos */
+    background-color: #FFFFFF99;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.cardTabela  .search-container {
+    display: flex;
+    position: relative;
+    justify-content: center;
+}
+
+.cardTabela .search-box {
+    width: 300px;
+    padding: 5px;
+    padding-left: 27px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    font-size: 16px;
+    transition: all 0.3s ease;
+}
+
+.cardTabela .search-box:focus {
+    border-color: #0a93a1;
+    outline: none;
+}
+
+.cardTabela .search-icon {
+    position: absolute;
+    left: 6px;
+    top: 50%;
+    width: 20px;
+    height: 20px;
+    translate: 0 -50%;
+    text-align: center;
+}
+
+.cardTabela .items{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 16px;
+}
+.cardTabela .items .item{
+    border: 1px solid #ccc;
+    background-color: #FFF;
+    border-radius: 5px;
+    transition: scale .3s;
+    cursor: pointer;
+    
+    -webkit-box-shadow: 0px 2px 15px -3px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 2px 15px -3px rgba(0,0,0,0.75);
+    box-shadow: 0px 2px 15px -8px rgba(0,0,0,0.75);
+}
+.cardTabela .items .item:hover{
+    scale: 1.0375;
+    z-index: 2;
+}
+.cardTabela .items .item img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+.cardTabela .items .item .info{
+    padding: 5px 10px;
+}
+.cardTabela .items .item .info .nome{
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+.cardTabela .items .item .info .verCardBtn {
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    align-items: center;
+    text-decoration: none;
+    color: #0a93a1;
+    gap: 5px;
+}
+
+
+.cardHemo.cardNumInfo{
+    flex: 1 1 100px;
+    max-width: 300px;
+    align-items: flex-start;
+    padding: 20px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+.cardHemo.cardNumInfo .informacoes{
+    flex-direction: column;
+}
+.cardHemo.cardNumInfo .informacoes .numDestaque{
+    font-size: 3rem;
+    font-weight: 600;
+}
+.cardHemo.cardNumInfo .informacoes .numDestaque.hemocentro{
+    color: #dc3049;
+}
+.cardHemo.cardNumInfo .informacoes .numDestaque.doacao{
+    color: #1bb46f;
+}
+.cardHemo.cardNumInfo .informacoes .numDestaque.campanha{
+    color: #0a93a1;
+}
+.cardHemo.cardNumInfo .icon{
+    font-size: 2.35rem;
+    color: #FFF;
+    padding: 6px;
+    border-radius: 4px;
+    user-select: none;
+}
+.cardHemo.cardNumInfo .icon.hemocentro{
+    background-color: #dc3049;
+}
+.cardHemo.cardNumInfo .icon.doacao{
+    background-color: #1bb46f;
+}
+.cardHemo.cardNumInfo .icon.campanha{
+    background-color: #0a93a1;
+}
+.cardHemo.cardGraph{
+    flex: 1;
+    padding: 5px;
+}
+
+dialog{
+    top: 50%;
+    transform: translateY(-50%);
+    overflow: hidden;
+    justify-self: center;
+    border: none;
+    outline: none;
+    z-index: 10;
+    width: fit-content;
+    border-radius: 10px;
+}
+dialog #closeModalBtn{
+    height: 52px;
+    width: 52px;
+    background-color: transparent;
+    border: none;
+    color: #FFF;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    right: 5px;
+    top: 5px;
+    cursor: pointer;
+    font-size: 2rem;
+}
+dialog img{
+    width: 100%;
+    height: 220px;
+    object-fit: cover;
+}
+dialog .header{
+    display: flex;
+    flex-direction: row;
+}
+dialog .header .info{
+    padding: 20px;
+}
+dialog .header .info .nome{
+    font-size: 2rem;
+    font-weight: 600;
+}
+dialog .header .info .email{
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+dialog .header .info .subTitulo{
+    margin-top: 24px;
+    font-size: 1.3rem;
+    font-weight: 600;
+}
+dialog .header .info #disableHemoBtn{
+    position: fixed;
+    display: flex;
+    align-items: center;
+    bottom: 15px;
+    background-color: #dc3049;
+    border: none;
+    border-radius: 10px;
+    color: #FFF;
+    font-size: 1.4rem;
+    font-weight: 500;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+dialog .header .cards{
+    flex-direction: column;
+    padding: 0;
+    gap: 0;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    margin: 0;
+}
+
+dialog .header .cards .cardHemo{
+    box-shadow: none;
+    gap: 20px;
+}
+dialog .header .cards .cardHemo.cardGraph{
+    padding: 20px;
 }
