--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -32,7 +32,7 @@
   .login-container button {
     padding: 10px 20px;
     width: 100%;
-    background: #2c3e50;
+    background: #007a86;
     color: #fff;
     border: none;
     cursor: pointer;
@@ -41,6 +41,6 @@
   }
   
   .login-container button:hover {
-    background: #1888bc;
+    background: #007b869a;
   }
   
