--- a/src/pages/hemocentros/Hemocentros.css
+++ b/src/pages/hemocentros/Hemocentros.css
@@ -16,10 +16,10 @@ table {
     width: 100%;
     border-collapse: collapse;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
 }
-
-thead {
-    background-color: #2c3e50;
+thead th{
+    background-color: #007a86;
     color: white;
 }
 
@@ -33,11 +33,15 @@ th {
     font-weight: bold;
     font-size: 1.1rem;
 }
+tr:nth-child(even) {
+    background:lightgray;
+  }
 
-tbody tr:hover {
-    background-color: #f5f5f5; /* Destaque ao passar o mouse */
+tr:hover {
+    background-color: #007a86; /* Destaque ao passar o mouse */
     transition: background-color 0.3s;
 }
+
 
 /* Botões de Ação */
 button {
@@ -111,14 +115,7 @@ button {
     -moz-box-shadow: 0px 2px 15px -3px rgba(0,0,0,0.75);
     box-shadow: 0px 2px 15px -8px rgba(0,0,0,0.75);
 }
-.cardTabela{
-    padding-top: 0px;
-    display: flex;
-    flex-direction: column;
-    max-height: 100%;
-    overflow-y: scroll;
-}
-.cardTabela .header{
+.cardHemo .header{
     display: flex;
     position: sticky; /* Fixando no topo ao rolar a página */
     top: 0;
@@ -130,13 +127,13 @@ button {
     padding-top: 20px;
     padding-bottom: 20px;
 }
-.cardTabela  .search-container {
+.cardHemo  .search-container {
     display: flex;
     position: relative;
     justify-content: center;
 }
 
-.cardTabela .search-box {
+.cardHemo .search-box {
     width: 300px;
     padding: 5px;
     padding-left: 27px;
@@ -146,12 +143,12 @@ button {
     transition: all 0.3s ease;
 }
 
-.cardTabela .search-box:focus {
+.cardHemo .search-box:focus {
     border-color: #0a93a1;
     outline: none;
 }
 
-.cardTabela .search-icon {
+.cardHemo .search-icon {
     position: absolute;
     left: 6px;
     top: 50%;
@@ -161,94 +158,6 @@ button {
     text-align: center;
 }
 
-.cardTabela .items{
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 16px;
-}
-.cardTabela .items .item{
-    border: 1px solid #ccc;
-    background-color: #FFF;
-    border-radius: 5px;
-    transition: scale .3s;
-    cursor: pointer;
-    
-    -webkit-box-shadow: 0px 2px 15px -3px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 2px 15px -3px rgba(0,0,0,0.75);
-    box-shadow: 0px 2px 15px -8px rgba(0,0,0,0.75);
-}
-.cardTabela .items .item:hover{
-    scale: 1.0375;
-    z-index: 2;
-}
-.cardTabela .items .item img{
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-}
-.cardTabela .items .item .info{
-    padding: 5px 10px;
-}
-.cardTabela .items .item .info .nome{
-    font-size: 1.25rem;
-    font-weight: 600;
-}
-.cardTabela .items .item .info .verCardBtn {
-    display: flex;
-    width: 100%;
-    justify-content: flex-end;
-    align-items: center;
-    text-decoration: none;
-    color: #0a93a1;
-    gap: 5px;
-}
-
-
-.cardHemo.cardNumInfo{
-    flex: 1 1 100px;
-    max-width: 300px;
-    align-items: flex-start;
-    padding: 20px;
-    border-radius: 10px;
-    display: flex;
-    justify-content: space-between;
-}
-.cardHemo.cardNumInfo .informacoes{
-    flex-direction: column;
-}
-.cardHemo.cardNumInfo .informacoes .numDestaque{
-    font-size: 3rem;
-    font-weight: 600;
-}
-.cardHemo.cardNumInfo .informacoes .numDestaque.hemocentro{
-    color: #dc3049;
-}
-.cardHemo.cardNumInfo .informacoes .numDestaque.doacao{
-    color: #1bb46f;
-}
-.cardHemo.cardNumInfo .informacoes .numDestaque.campanha{
-    color: #0a93a1;
-}
-.cardHemo.cardNumInfo .icon{
-    font-size: 2.35rem;
-    color: #FFF;
-    padding: 6px;
-    border-radius: 4px;
-    user-select: none;
-}
-.cardHemo.cardNumInfo .icon.hemocentro{
-    background-color: #dc3049;
-}
-.cardHemo.cardNumInfo .icon.doacao{
-    background-color: #1bb46f;
-}
-.cardHemo.cardNumInfo .icon.campanha{
-    background-color: #0a93a1;
-}
-.cardHemo.cardGraph{
-    flex: 1;
-    padding: 5px;
-}
 
 dialog{
     top: 50%;
