--- a/src/pages/pendencias/Pendencias.css
+++ b/src/pages/pendencias/Pendencias.css
@@ -37,10 +37,7 @@
     border-radius: 15px;
     background-color: #FFF;
     padding: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    -webkit-user-select: none; /* Safari */
-    -ms-user-select: none; /* IE 10 and IE 11 */
-    user-select: none; /* Standard syntax */
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 .card:hover{
     cursor: pointer;
