--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -1,14 +1,14 @@
-.dashboard-content {
+.ADM-dashboard-content {
     padding: 40px;
 }
 
-.dashboard-content h1 {
+.ADM-dashboard-content h1 {
     font-size: 2.5em;
     margin-bottom: 20px;
     color: #2c3e50;
 }
   
-.dashboard-metrics {
+.ADM-dashboard-metrics {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
