--- a/src/components/HomeSection.css
+++ b/src/components/HomeSection.css
@@ -12,6 +12,13 @@
     margin: 0; /* Elimina qualquer margem padrão */
 }
 
+.main-content:has(.inicio){
+  padding: 0;
+  margin: 0;
+  display: flex;
+  width: 100vw;
+  height: 100%;
+}
   
   .overlay {
     position: absolute;
