--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,4 +1,4 @@
-.footer {
+footer {
     background-color: #292626;
     color: #fff;
     padding: 20px 0;
@@ -18,11 +18,13 @@
     padding: 0;
     margin: 10px 0;
     display: flex;
+    flex-direction: row;
     justify-content: center;
   }
   
   .footer .social-links li {
     margin: 0 10px;
+    color: #FFF;
   }
   
   .footer .social-links a {
