--- a/src/components/HomeSection.css
+++ b/src/components/HomeSection.css
@@ -3,13 +3,16 @@
     text-align: center;
     background: url('../images/medicosangue.jpg') no-repeat center center;
     background-size: cover;
-    min-height: 100vh; /* Garante que a seção ocupe 100% da altura da tela */
-    width: 100vw; /* Faz com que ocupe a largura inteira */
+    flex: 1;
     display: flex;
+    width: 100vw;
+    height: 100vh;
     align-items: center;
     justify-content: center;
     padding: 20px;
     margin: 0; /* Elimina qualquer margem padrão */
+    padding: 0;
+    margin: 0;
 }
 
 .main-content:has(.inicio){
@@ -18,6 +21,7 @@
   display: flex;
   width: 100vw;
   height: 100%;
+  overflow: hidden;
 }
   
   .overlay {
@@ -27,6 +31,7 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5); /* Overlay escuro */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
   .divdireita {
