--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -2,7 +2,7 @@
     padding: 15px;
     background-color: #fff;
     position: fixed;
-    width: 100%;
+    width: 98vw;
     top: 0;
     box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.1);
     z-index: 1000; /* Para garantir que fique acima de outros elementos */
