--- a/src/pages/HemocentroDashboard.css
+++ b/src/pages/HemocentroDashboard.css
@@ -1,30 +1,42 @@
 /* HemocentroDashboard.css */
 .dashboard-container {
     display: flex;
+    max-width: 100%;
+    overflow: hidden;
+    height: 100vh;
+    max-height: 100vh;
 }
 
 .dashboard-content {
     flex-grow: 1;
-    padding: 20px;
+    flex: 1;
+    height: 100%;
+    max-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .dashboard-metrics {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
     gap: 20px;
-    margin-top: 20px;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .estoque-container {
-    margin-top: 40px;
+    height: 500px;
     background: #f9f9f9;
     padding: 20px;
     border-radius: 10px;
+    margin: 20px;
+    padding-bottom: 80px;
+    display: flex;
+    flex-direction: column;
 }
 
-.estoque-container h2 {
-    margin-bottom: 20px;
-}
 
 .estoque-container ul {
     list-style: none;
