--- a/src/pages/HemocentroFuncionario.css
+++ b/src/pages/HemocentroFuncionario.css
@@ -36,3 +36,19 @@
 .funcionarios-table tr:hover {
     background-color: #ddd;
 }
+
+.add-funcionario-btn {
+    background-color: #28a745;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+    margin-top: 15px; /* Ajusta o espaçamento */
+}
+
+.add-funcionario-btn:hover {
+    background-color: #218838;
+}
