--- a/src/components/EditHemocentroModal.css
+++ b/src/components/EditHemocentroModal.css
@@ -17,6 +17,8 @@
     border-radius: 8px;
     max-width: 500px;
     width: 100%;
+    height: 600px;
+    overflow-y: auto;
     text-align: left;
 }
 
