--- a/src/pages/HemocentroDashboard.css
+++ b/src/pages/HemocentroDashboard.css
@@ -10,6 +10,7 @@
 .dashboard-content {
     flex-grow: 1;
     flex: 1;
+    margin-left: 100px;
     height: 100%;
     max-height: 100vh;
     display: flex;
